Resolves: tdf#158997 optimal col width too narrow to render text

optimal is measured with kerning on, while text is rendered with
kerning off

possibly a problem since:

commit 36eed54d3dfed6551fd2ad944feff7e217c56e82
Date:   Tue Jul 3 15:00:26 2018 +0200

    Resolves: tdf#118221 whole cell kerning default is off

Change-Id: I0e6de75a89823f6ed58a74782e47feb0a44014e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161679
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>